fix: prevent layout breaking on screens under 320px

--- a/CSS/media.css
+++ b/CSS/media.css
@@ -143,7 +143,7 @@
     }
 }
 
-@media screen and (min-width: 320px) and (max-width: 869px) {
+@media screen and (max-width: 869px) {
     .nav-logo {
         width: 50px;
         height: auto;
